--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+body
+{
+    font-size: 10px;
+    background-color: palegoldenrod;
+}
+
+
+article
+{
+    border: 1px solid black;
+}
